@@ -1,5 +1,6 @@
 3.7.2011
   - Added check for Genuine items (and Community and Valve and Self-Made)...
+  - Added Dirty/Clean check for UHHH, Voodoo Juju, Spine-Chilling Skull
 
 3.3.2011
   - Fixed a bug with primary and secondary slot tokens being classified
